Staatic deployment aa469411a1e1

--- a/index.php/teachers/index.html
+++ b/index.php/teachers/index.html
@@ -263,7 +263,7 @@ var msm_mega_submenu = {"data":{"submenu_items_position_relative":0,"mobile_menu
 <div class="respmenu-submenu-toggle cbp-respmenu-more"><i class="icon-edright-arrow"></i></div>
 
 <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a href="#">KODAIMALAI AMBEDKHAR</a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a target="_blank" rel="noopener" href="https://aronprasad.github.io/kodaimalai/">KODAIMALAI AMBEDKHAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-869"><a href="#">CHEMMALAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-870"><a href="#">SATTAMETHAI</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-871"><a href="#">AATHITHAMIZHAR</a></li>
@@ -336,7 +336,7 @@ var msm_mega_submenu = {"data":{"submenu_items_position_relative":0,"mobile_menu
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-865 msm-top-level-item"><a href="https://aronprasad.github.io/tlrfmdu/index.php/announcements/">Announcements</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-863 msm-top-level-item"><a href="https://aronprasad.github.io/tlrfmdu/index.php/federation-member-unions/">Federation member unions</a>
 <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a href="#">KODAIMALAI AMBEDKHAR</a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a target="_blank" rel="noopener" href="https://aronprasad.github.io/kodaimalai/">KODAIMALAI AMBEDKHAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-869"><a href="#">CHEMMALAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-870"><a href="#">SATTAMETHAI</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-871"><a href="#">AATHITHAMIZHAR</a></li>
