--- a/index.php/announcements/index.html
+++ b/index.php/announcements/index.html
@@ -266,7 +266,7 @@ var msm_mega_submenu = {"data":{"submenu_items_position_relative":0,"mobile_menu
 <div class="respmenu-submenu-toggle cbp-respmenu-more"><i class="icon-edright-arrow"></i></div>
 
 <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a href="#">KODAIMALAI AMBEDKHAR</a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a target="_blank" rel="noopener" href="https://aronprasad.github.io/kodaimalai/">KODAIMALAI AMBEDKHAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-869"><a href="#">CHEMMALAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-870"><a href="#">SATTAMETHAI</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-871"><a href="#">AATHITHAMIZHAR</a></li>
@@ -339,7 +339,7 @@ var msm_mega_submenu = {"data":{"submenu_items_position_relative":0,"mobile_menu
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-846 current_page_item menu-item-865 msm-top-level-item"><a href="https://aronprasad.github.io/tlrfmdu/index.php/announcements/" aria-current="page">Announcements</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-863 msm-top-level-item"><a href="https://aronprasad.github.io/tlrfmdu/index.php/federation-member-unions/">Federation member unions</a>
 <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a href="#">KODAIMALAI AMBEDKHAR</a></li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-868"><a target="_blank" rel="noopener" href="https://aronprasad.github.io/kodaimalai/">KODAIMALAI AMBEDKHAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-869"><a href="#">CHEMMALAR</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-870"><a href="#">SATTAMETHAI</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-871"><a href="#">AATHITHAMIZHAR</a></li>
